opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_traverse_builtins"
bug-reports: "https://github.com/janestreet/ppx_traverse_builtins/issues"
dev-repo: "git+https://github.com/janestreet/ppx_traverse_builtins.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppxlib"                {>= "v0.11.0"}
  "jbuilder" {build & >= "1.0+beta12"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Builtins for Ppx_traverse

This library defines the default methods for builtin types (int,
string, list, ...) for Ppx_traverse.
"
